# api-examples

./: Makefile  README.md  pyproject.toml
src/api_examples/: __init__.py
src/api_examples/backend/: database.py  graphql_server.py  grpc_server.py  rest_server.py  test_grpc.py
src/api_examples/backend/protos/: housing.proto  housing_pb2.py  housing_pb2_grpc.py
src/api_examples/frontend/: main.py
